--- a/cart.html
+++ b/cart.html
@@ -42,7 +42,7 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav___list">
           <li class="nav__item">
-            <a href="index.html" class="nav__link active-link">Home</a>
+            <a href="index.html" class="nav__link">Home</a>
           </li>
           <li class="nav__item">
             <a href="shop.html" class="nav__link">Shop</a>
@@ -246,7 +246,7 @@
       </div>
     </section>
     <!--=============== NEWSLETTER ===============-->
-    <section class="newsletter section home__newsletter">
+    <section class="newsletter section ">
       <div class="newsletter__container container grid">
         <h3 class="newsletter__title flex">
           <img src="assets/img/icon-email.svg" alt="" class="newsletter__icon">
