--- a/checkout.html
+++ b/checkout.html
@@ -1,43 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== FLATICON ===============-->
-    <link rel="stylesheet" href="" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="" />
+  <!--=============== FLATICON ===============-->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css" rel="stylesheet" />
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="" />
+  <!--=============== SWIPER CSS ===============-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <title>Ecommerce Website</title>
-  </head>
-  <body>
-    <!--=============== HEADER ===============-->
-    <header class="header"></header>
+  <!--=============== CSS ===============-->
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 
-    <!--=============== MAIN ===============-->
-    <main class="main">
-      <!--=============== BREADCRUMB ===============-->
-      <section class="breadcrumb"></section>
+  <title>Ecommerce Website</title>
+</head>
 
-      <!--=============== CHECKOUT ===============-->
-      <section class="checkout"></section>
+<body>
+  <!--=============== HEADER ===============-->
+  <header class="header" id="header">
+    <div class="header__top">
+      <div class="header__container container">
+        <div class="header__contact">
+          <span>(+01) - 9999 - 9999</span>
+          <span>Out Location</span>
+        </div>
+        <p class="header__alert-news">
+          Super Value Deals - Save more with coupons
+        </p>
 
-      <!--=============== NEWSLETTER ===============-->
-      <section class="newsletter"></section>
-    </main>
+        <a href="login-register.html" class="header__top-action">
+          Log In / Sing Up
+        </a>
+      </div>
+    </div>
+    <nav class="nav container">
+      <a href="index.html" class="nav__logo">
+        <img src="assets/img/logo.svg" alt="" class="nav__logo-img">
+      </a>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav___list">
+          <li class="nav__item">
+            <a href="index.html" class="nav__link">Home</a>
+          </li>
+          <li class="nav__item">
+            <a href="shop.html" class="nav__link">Shop</a>
+          </li>
+          <li class="nav__item">
+            <a href="accounts.html" class="nav__link">My Account</a>
+          </li>
+          <li class="nav__item">
+            <a href="compare.html" class="nav__link">Compare</a>
+          </li>
+          <li class="nav__item">
+            <a href="login-register.html" class="nav__link">Login</a>
+          </li>
+        </ul>
+        <div class="header__search">
+          <input type="text" class="form__input" placeholder="Search for items" />
+          <button class="search__btn">
+            <img src="assets/img/search.png" alt="" />
+          </button>
+        </div>
+      </div>
+      <div class="header__user-actions">
+        <a href="wishlist.html" class="header__action-btn">
+          <img src="assets/img/icon-heart.svg" alt="">
+          <span class="count">3</span>
+        </a>
+        <a href="cart.html" class="header__action-btn">
+          <img src="assets/img/icon-cart.svg" alt="">
+          <span class="count">3</span>
+        </a>
+      </div>
+    </nav>
+  </header>
 
-    <!--=============== FOOTER ===============-->
-    <footer class="footer"></footer>
+  <!--=============== MAIN ===============-->
+  <main class="main">
+    <!--=============== BREADCRUMB ===============-->
+    <section class="breadcrumb">
+      <ul class="breadcrumb__list flex container">
+        <li><a href="index.html" class="breadcrumb__link">Home</a></li>
+        <li><span class="breadcrumb__link">></span></li>
+        <li><span class="breadcrumb__link">Shop</span></li>
+        <li><span class="breadcrumb__link">></span></li>
+        <li><span class="breadcrumb__link">Checkout</span></li>
+      </ul>
+    </section>
 
-    <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <!--=============== CHECKOUT ===============-->
+    <section class="checkout section--lg">
+      <div class="checkout__container conatiner grid">
+        <div class="checkout__group">
+          <h3 class="section__title">
+            Billing Details
+          </h3>
+          <form action="" class="form grid">
+            <input type="text" class="form__input" placeholder="Name">
+            <input type="text" class="form__input" placeholder="Address">
+            <input type="text" class="form__input" placeholder="City">
+            <input type="text" class="form__input" placeholder="Country">
+            <input type="text" class="form__input" placeholder="Postcode">
+            <input type="text" class="form__input" placeholder="Phone">
+            <input type="email" class="form__input" placeholder="Email">
+            <h3 class="checkout__title">Additional Information</h3>
+            <textarea placeholder="Order Note" class="form__input textarea" cols="30" rows="10"></textarea>
+          </form>
+        </div>
+        <div class="checkout__group">
+          <h3 class="section__title">Cart Totals</h3>
 
-    <!--=============== MAIN JS ===============-->
-    <script src=""></script>
-  </body>
+          <table class="order__table">
+            <tr>
+              <th>Products</th>
+              <th>Total</th>
+            </tr>
+            <tr>
+              <td><img src="assets/img/product-1-2.jpg" alt="" class="order__img"></td>
+              <td>
+                <h3 class="order__title">Yidarton Women Summer Blue</h3>
+                <p class="table__quantity">x 2</p>
+              </td>
+              <td>
+                <span class="table__price">$180.00</span>
+              </td>
+            </tr>
+
+            <tr>
+              <td><img src="assets/img/product-2-1.jpg" alt="" class="order__img"></td>
+              <td>
+                <h3 class="order__title">Lbd Moon Women Summer </h3>
+                <p class="table__quantity">x 1</p>
+              </td>
+              <td>
+                <span class="table__price">$65.00</span>
+              </td>
+            </tr>
+
+            <tr>
+              <td><img src="assets/img/product-7-1.jpg" alt="" class="order__img"></td>
+              <td>
+                <h3 class="order__title">Women's Short Sleeve Loose </h3>
+                <p class="table__quantity">x 2</p>
+              </td>
+              <td>
+                <span class="table__price">$35.00</span>
+              </td>
+            </tr>
+            <tr>
+              <td><span class="order__subtotle">SubTotal</span></td>
+              <td><span class="table__price">$280.00</span></td>
+            </tr>
+
+            <tr>
+              <td><span class="order__subtotle">Shipping</span></td>
+              <td><span class="table__price">Free Shipping</span></td>
+            </tr>
+
+            <tr>
+              <td><span class="order__subtotle">Total</span></td>
+              <td><span class="table__price">$280.00</span></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <!--=============== NEWSLETTER ===============-->
+    <section class="newsletter section ">
+      <div class="newsletter__container container grid">
+        <h3 class="newsletter__title flex">
+          <img src="assets/img/icon-email.svg" alt="" class="newsletter__icon">
+          Sing up to Newsletter
+        </h3>
+        <p class="newsletter__description">
+          ...and receive $25 cupion for your first shopping
+        </p>
+        <form action="submit" class="newsletter__form">
+          <input type="email" class="newsletter__input" placeholder="Enter your email">
+          <button type="submit" class="newsletter__btn">Subscribe</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!--=============== FOOTER ===============-->
+  <footer class="footer container">
+    <div class="footer__container conrainer grid">
+      <div class="footer__content">
+
+        <a href="index.html" class="footer__logo">
+          <img src="assets/img/logo.svg" alt="" class="footer__logo-img">
+        </a>
+        <h4 class="footer__subtitle">Contact</h4>
+        <p class="footer__description">
+          <span>Address :</span> 562 wellington Road , Street32 ,San Francisco
+        </p>
+
+        <p class="footer__description">
+          <span>Phone :</span> +1 9999 999 / +91 9 9999 9999
+        </p>
+
+        <p class="footer__description">
+          <span>Email :</span> bestStore24@gmail.com
+        </p>
+        <div class="footer__social">
+          <h4 class="footer__subtitle">Follow Us</h4>
+          <div class="footer__social-links flex">
+            <a href="https://www.facebook.com/" target="_blank">
+              <img src="assets/img/icon-facebook.svg" alt="" class="footer__social-icon">
+            </a>
+            <a href="https://www.twitter.com/" target="_blank">
+              <img src="assets/img/icon-twitter.svg" alt="" class="footer__social-icon">
+            </a>
+            <a href="https://www.instagram.com/" target="_blank">
+              <img src="assets/img/icon-instagram.svg" alt="" class="footer__social-icon">
+            </a>
+            <a href="https://www.pinterest.com/" target="_blank">
+              <img src="assets/img/icon-pinterest.svg" alt="" class="footer__social-icon">
+            </a>
+            <a href="https://www.youtube.com/" target="_blank">
+              <img src="assets/img/icon-youtube.svg" alt="" class="footer__social-icon">
+            </a>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Address</h3>
+        <ul class="footer__links">
+          <li><a href="" class="footer__link">About Us</a></li>
+          <li><a href="" class="footer__link">delevery Information</a></li>
+          <li><a href="" class="footer__link">Privacy Policy</a></li>
+          <li><a href="" class="footer__link">Terms & Conditions</a></li>
+          <li><a href="" class="footer__link">Contact Us</a></li>
+          <li><a href="" class="footer__link">Support Center</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">My Account</h3>
+        <ul class="footer__links">
+          <li><a href="" class="footer__link">Sing In</a></li>
+          <li><a href="" class="footer__link">View Cart</a></li>
+          <li><a href="" class="footer__link">My Wishlist </a></li>
+          <li><a href="" class="footer__link">Track My order</a></li>
+          <li><a href="" class="footer__link">Help</a></li>
+          <li><a href="" class="footer__link">Other</a></li>
+        </ul>
+      </div>
+
+      <div class="footer__content">
+        <h3 class="footer__title">Secured Payment Gateways</h3>
+        <img src="assets/img/payment-method.png" alt="" class="payment_img">
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <p class="copyright">&copy; 2023 evara , all rights reserved</p>
+      <span class="design">design insperation from Crypticalcoder</span>
+    </div>
+  </footer>
+
+  <!--=============== SWIPER JS ===============-->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!--=============== MAIN JS ===============-->
+  <script src="./assets/js/main.js"></script>
+</body>
+
 </html>
