--- a/compare.html
+++ b/compare.html
@@ -97,6 +97,7 @@
           <td><img src="assets/img/product-4-1.jpg" alt="" class="compare__img"></td>
           <td><img src="assets/img/product-7-1.jpg" alt="" class="compare__img"></td>
         </tr>
+
         <tr>
           <th>Name</th>
           <td>
@@ -109,12 +110,14 @@
             <h3 class="table__title">Henley Shirt</h3>
           </td>
         </tr>
+
         <tr>
           <th>Price</th>
           <td><span class="table__price">$35</span></td>
           <td><span class="table__price">$67</span></td>
           <td><span class="table__price">$24</span></td>
         </tr>
+
         <tr>
           <th>footer description</th>
           <td>
@@ -139,18 +142,11 @@
             </p>
           </td>
         </tr>
+
         <tr>
           <th>Colors</th>
           <td>
-            <ul class="color__list compare color">
-              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
-              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
-              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
-            </ul>
-          </td>
-          
-          <td>
-            <ul class="color__list compare color">
+            <ul class="color__list compare__colors">
               <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
               <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
               <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
@@ -158,12 +154,54 @@
           </td>
 
           <td>
-            <ul class="color__list compare color">
+            <ul class="color__list compare__colors">
               <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
               <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
               <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
             </ul>
           </td>
+
+          <td>
+            <ul class="color__list compare__colors">
+              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
+            </ul>
+          </td>
+        </tr>
+
+        <tr>
+          <th>Stock</th>
+          <td><span class="table__stock">Out of stock</span></td>
+          <td><span class="table__stock">Out of stock</span></td>
+          <td><span class="table__stock">Out of stock</span></td>
+        </tr>
+
+        <tr>
+          <th>Weight</th>
+          <td><span class="table__weight">150 gram</span></td>
+          <td><span class="table__weight">150 gram</span></td>
+          <td><span class="table__weight">150 gram</span></td>
+        </tr>
+
+        <tr>
+          <th>Dimentions</th>
+          <td><span class="table_dimentions">N / A</span></td>
+          <td><span class="table_dimentions">N / A</span></td>
+          <td><span class="table_dimentions">N / A</span></td>
+        </tr>
+
+        <tr>
+          <th>Buy</th>
+          <td><a href="#" class="btn btn--sm">Add To Cart</a></td>
+          <td><a href="#" class="btn btn--sm">Add To Cart</a></td>
+          <td><a href="#" class="btn btn--sm">Add To Cart</a></td>
+        </tr>
+        <tr>
+          <th>remove</th>
+          <td><i class="ri-delete-bin-7-line table__trash"></i></td>
+          <td><i class="ri-delete-bin-7-line table__trash"></i></td>
+          <td><i class="ri-delete-bin-7-line table__trash"></i></td>
         </tr>
       </table>
     </section>
