--- a/accounts.html
+++ b/accounts.html
@@ -92,7 +92,7 @@
     <section class="accounts section--lg">
       <div class="accounts__container container grid">
         <div class="account__tabs">
-          <p class="account__tab" data-target="#dashboard">
+          <p class="account__tab active-tab" data-target="#dashboard">
             <i class="ri-settings-5-line"></i> Dashboard
           </p>
           <p class="account__tab" data-target="#orders">
@@ -114,7 +114,7 @@
 
         <div class="tabs__content">
 
-          <div class="tab__content" content id="dashboard">
+          <div class="tab__content active-tab" content id="dashboard">
             <h3 class="tab__header">Hello User</h3>
             <div class="tab__body">
               <p class="tab__description">
@@ -166,7 +166,7 @@
             </div>
           </div>
 
-          <div class="tab__centent" content id="update-profile">
+          <div class="tab__content" content id="update-profile">
             <h3 class="tab__header">Update Profile</h3>
             <div class="tab__body">
               <form action="" class="from grid">
