--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <ul class="nav___list">
+        <ul class="nav__list">
           <li class="nav__item">
             <a href="index.html" class="nav__link active-link">Home</a>
           </li>
