--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="index.html" class="nav__menu-logo">
             <img src="assets/img/logo.svg" alt="">
           </a>
-          <div class="nav__close">
+          <div class="nav__close" id="nav-close">
             <i class="ri-close-line"></i>
           </div>
         </div>
