--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,7 @@
         <img src="assets/img/logo.svg" alt="" class="nav__logo-img">
       </a>
       <div class="nav__menu" id="nav-menu">
-        <ul class="nav___list">
+        <ul class="nav__list">
           <li class="nav__item">
             <a href="index.html" class="nav__link">Home</a>
           </li>
